--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ window.restoreJSONMerge = function () {
     <div id="logoBox">SC</div>
     <div>
       <div style="font-weight:900">Star Cars London Ltd</div>
-      <div class="small">Dealer Backoffice — v48 upgraded</div>
+      <div class="small">Dealer Backoffice </div>
     </div>
   </div>
   <div class="hdr-actions">
@@ -1169,62 +1169,51 @@ async function syncPush(){
         }
 
         if (Array.isArray(val)) {
-        // 🔁 Merge ANY array by id: vehicles, expenses, showroom, users, directors, investors, etc.
-        const localArr  = Array.isArray(db[k]) ? db[k] : [];
-        const remoteArr = Array.isArray(val)    ? val   : [];
-        const byId = Object.create(null);
-        const noId = [];
+          // 🔁 Merge ANY array by id: vehicles, expenses, showroom, users, directors, investors, etc.
+          const localArr = Array.isArray(db[k]) ? db[k] : [];
+          const byId = Object.create(null);
+          const noId = [];
 
-        // 1) Start from local → keep our unsynced stuff
-        for (const item of localArr) {
-        if (item && item.id) {
-        byId[item.id] = item;
-       } else {
-      noId.push(item);
-      }
-    }
+          // Start from local → keep our unsynced stuff
+          for (const item of localArr) {
+            if (item && item.id) {
+              byId[item.id] = item;
+            } else {
+              noId.push(item);
+            }
+          }
 
-    // 2) Apply incoming (remote) → add new items, overwrite same-id with remote (remote wins normally)
-    for (const item of remoteArr) {
-    if (item && item.id) {
-      byId[item.id] = item; // remote (Gist) wins on conflicts by default
-    } else {
-      noId.push(item);
-    }
-    }
+          // Apply incoming (remote) → add new items, overwrite same-id with remote
+          for (const item of val) {
+            if (item && item.id) {
+              byId[item.id] = item; // remote (Gist) wins on conflicts
+            } else {
+              noId.push(item);
+            }
+          }
 
-    // 3) SPECIAL CASE: for USERS, let LOCAL edits (permissions) win last
-    if (k === 'users') {
-    for (const item of localArr) {
-      if (item && item.id) {
-        byId[item.id] = item; // now local wins for users
-      }
-    }
-  }
+          db[k] = [...noId, ...Object.values(byId)];
 
-  db[k] = [...noId, ...Object.values(byId)];
+          // Users: normalise permissions
+          if (k === 'users' && typeof normalizePerms === 'function') {
+            db.users = (db.users || []).map(u => {
+              u.perms = normalizePerms(u.perms);
+              return u;
+            });
+          }
 
-  // Users: normalise permissions
-  if (k === 'users' && typeof normalizePerms === 'function') {
-    db.users = (db.users || []).map(u => {
-      u.perms = normalizePerms(u.perms);
-      return u;
-    });
-  }
+          // Directors: unique partners by name
+          if (k === 'partners') {
+            db.partners = (db.partners || []).filter((p, i, arr) =>
+              arr.findIndex(pp =>
+                String(pp.name || '').trim().toLowerCase() ===
+                String(p.name || '').trim().toLowerCase()
+              ) === i
+            );
+          }
 
-  // Directors: unique partners by name
-  if (k === 'partners') {
-    db.partners = (db.partners || []).filter((p, i, arr) =>
-      arr.findIndex(pp =>
-        String(pp.name || '').trim().toLowerCase() ===
-        String(p.name || '').trim().toLowerCase()
-      ) === i
-    );
-  }
-
-  return;
-}
-
+          return;
+        }
 
         if (val && typeof val === 'object') {
         // Shallow-merge plain objects (company, settings etc.)
@@ -2184,110 +2173,94 @@ ${canProfit()?('<td class="right">'+fmtMoney(profit)+'</td>'):''}
     } else if(b.dataset.act==='inv'){ printInvoice(s.id); } else if(b.dataset.act==='proforma'){ printFinanceProforma(s.id); }
   });
 
-    wrap.querySelector('#sale_add').onclick = () => { 
-    if (!canAction('add')) return alert('No permission'); 
-
-    const regInput = (wrap.querySelector('#sale_reg').value || '').toUpperCase().trim(); 
-    const vid = findVehicleIdByReg(regInput); 
-    if (!vid) return alert('Enter a valid REG (use the suggestions).');
-
-    // 🔒 PREVENT DOUBLE SALE when creating a NEW sale
-    if (!editId) {
-      const vehicle = (db.vehicles || []).find(x => x.id === vid);
-      const hasSale = (db.sales || []).some(sale => sale.vehicleId === vid);
-
-      if ((vehicle && vehicle.status === 'sold') || hasSale) {
-        return alert('This vehicle is already sold. Use EDIT on the existing sale instead of creating a new one.');
-      }
-    }
+  wrap.querySelector('#sale_add').onclick=()=>{ 
+  if(!canAction('add')) return alert('No permission'); 
+  const regInput=(wrap.querySelector('#sale_reg').value||'').toUpperCase().trim(); 
+  const vid=findVehicleIdByReg(regInput); 
+  if(!vid) return alert('Enter a valid REG (use the suggestions).');
   
-    // AUTO-INCREMENT: Get or generate invoice number
-    let invNoValue = wrap.querySelector('#sale_invNo').value.trim();
-    if (!invNoValue && !editId) {
-      invNoValue = getNextInvoiceNo();
-    }
+  // AUTO-INCREMENT: Get or generate invoice number
+  let invNoValue = wrap.querySelector('#sale_invNo').value.trim();
+  if (!invNoValue && !editId) {
+    invNoValue = getNextInvoiceNo();
+  }
   
-    const price = Number(wrap.querySelector('#sale_price').value || 0);
-    const s = { 
-      id: editId || uid(), 
-      vehicleId: vid, 
-      date: wrap.querySelector('#sale_date').value,
-      firstReg: wrap.querySelector('#sale_firstReg').value,
-      buyer: wrap.querySelector('#sale_buyer').value.trim(),
-      address: wrap.querySelector('#sale_addr').value.trim(),
-      phone: wrap.querySelector('#sale_phone').value.trim(),
-      email: wrap.querySelector('#sale_email').value.trim(),
-      mileage: Number(wrap.querySelector('#sale_mileage').value || 0),
-      salePrice: price,
-      deposit: Number(wrap.querySelector('#sale_dep').value || 0),
-      cash: Number(wrap.querySelector('#sale_cash').value || 0),
-      card: Number(wrap.querySelector('#sale_card').value || 0),
-      bank: Number(wrap.querySelector('#sale_bank').value || 0),
-      finance: Number(wrap.querySelector('#sale_fin').value || 0),
-      partex: wrap.querySelector('#sale_partex').value.trim(),
-      pxReg: (wrap.querySelector('#sale_pxReg').value || '').trim().toUpperCase(),
-      pxMake: wrap.querySelector('#sale_pxMake').value.trim(),
-      pxModel: wrap.querySelector('#sale_pxModel').value.trim(),
-      pxAllowance: Number(wrap.querySelector('#sale_pxAllowance').value || 0),
-      financeCompany: wrap.querySelector('#sale_finCo').value.trim(),
-      agreement: wrap.querySelector('#sale_agree').value.trim(),
-      deliverTo: wrap.querySelector('#sale_deliver').value.trim(),
-      keys: wrap.querySelector('#sale_keys').value.trim(),
-      mot: wrap.querySelector('#sale_mot').value.trim(),
-      serviceHistory: wrap.querySelector('#sale_sh').value.trim(),
-      invNo: invNoValue || (Date.now() + '').slice(-6)
-    };
+  const price=Number(wrap.querySelector('#sale_price').value||0);
+  const s={ 
+    id:editId||uid(), 
+    vehicleId:vid, 
+    date:wrap.querySelector('#sale_date').value,
+    firstReg:wrap.querySelector('#sale_firstReg').value,
+    buyer:wrap.querySelector('#sale_buyer').value.trim(),
+    address:wrap.querySelector('#sale_addr').value.trim(),
+    phone:wrap.querySelector('#sale_phone').value.trim(),
+    email:wrap.querySelector('#sale_email').value.trim(),
+    mileage:Number(wrap.querySelector('#sale_mileage').value||0),
+    salePrice:price,
+    deposit:Number(wrap.querySelector('#sale_dep').value||0),
+    cash:Number(wrap.querySelector('#sale_cash').value||0),
+    card:Number(wrap.querySelector('#sale_card').value||0),
+    bank:Number(wrap.querySelector('#sale_bank').value||0),
+    finance:Number(wrap.querySelector('#sale_fin').value||0),
+    partex:wrap.querySelector('#sale_partex').value.trim(),
+    pxReg:(wrap.querySelector('#sale_pxReg').value||'').trim().toUpperCase(),
+    pxMake:wrap.querySelector('#sale_pxMake').value.trim(),
+    pxModel:wrap.querySelector('#sale_pxModel').value.trim(),
+    pxAllowance:Number(wrap.querySelector('#sale_pxAllowance').value||0),
+    financeCompany:wrap.querySelector('#sale_finCo').value.trim(),
+    agreement:wrap.querySelector('#sale_agree').value.trim(),
+    deliverTo:wrap.querySelector('#sale_deliver').value.trim(),
+    keys:wrap.querySelector('#sale_keys').value.trim(),
+    mot:wrap.querySelector('#sale_mot').value.trim(),
+    serviceHistory:wrap.querySelector('#sale_sh').value.trim(),
+    invNo:invNoValue || (Date.now()+'').slice(-6)};
     
-    const sumBreak = s.deposit + s.cash + s.card + s.bank + s.finance + s.pxAllowance;
-    if (sumBreak !== s.salePrice) {
-      if (!confirm('Payments + PX do not equal sale price. Continue?')) return;
-    }
-
-    if (editId) { 
+    const sumBreak=s.deposit+s.cash+s.card+s.bank+s.finance+s.pxAllowance;
+    if(sumBreak!==s.salePrice){ if(!confirm('Payments + PX do not equal sale price. Continue?')) return; }
+    if(editId){ 
       // Update existing sale - don't change vehicle status
-      db.sales = db.sales.map(x => x.id === editId ? s : x); 
-      addAudit('update', 'sale', s.id, (db.vehicles.find(x => x.id === s.vehicleId) || {}).reg + ' inv ' + s.invNo); 
-      const vM = db.vehicles.find(x => x.id === s.vehicleId); 
-      if (vM) vM.mileage = s.mileage || vM.mileage; 
-      editId = null; 
+      db.sales=db.sales.map(x=>x.id===editId?s:x); 
+      addAudit('update','sale',s.id,(db.vehicles.find(x=>x.id===s.vehicleId)||{}).reg+' inv '+s.invNo); 
+      const vM=db.vehicles.find(x=>x.id===s.vehicleId); 
+      if(vM) vM.mileage=s.mileage||vM.mileage; 
+      editId=null; 
     } else { 
       // New sale - mark vehicle as sold
       db.sales.unshift(s); 
-      addAudit('add', 'sale', s.id, (db.vehicles.find(x => x.id === s.vehicleId) || {}).reg + ' inv ' + s.invNo); 
-      const vStat = db.vehicles.find(x => x.id === vid); 
-      if (vStat) { 
-        vStat.status = 'sold'; 
-        vStat.mileage = s.mileage || vStat.mileage; 
+      addAudit('add','sale',s.id,(db.vehicles.find(x=>x.id===s.vehicleId)||{}).reg+' inv '+s.invNo); 
+      const vStat=db.vehicles.find(x=>x.id===vid); 
+      if(vStat){ 
+        vStat.status='sold'; 
+        vStat.mileage=s.mileage||vStat.mileage; 
       } 
-      if (s.pxReg && s.pxAllowance > 0) { 
-        const px = {
-          id: uid(),
-          reg: s.pxReg,
-          make: s.pxMake,
-          model: s.pxModel,
-          colour: '',
-          fuel: '',
-          mileage: 0,
-          purchase: s.pxAllowance,
-          ownerType: 'owned',
-          investor: '',
-          supplier: 'PART-EX',
+      if(s.pxReg&&s.pxAllowance>0){ 
+        const px={
+          id:uid(),
+          reg:s.pxReg,
+          make:s.pxMake,
+          model:s.pxModel,
+          colour:'',
+          fuel:'',
+          mileage:0,
+          purchase:s.pxAllowance,
+          ownerType:'owned',
+          investor:'',
+          supplier:'PART-EX',
           supplierNote: `PX from sale ${s.invNo} (${vStat?.reg || 'Unknown'})`,
           originalSaleId: s.id,
-          vin: '',
-          status: 'for sale',
-          createdAt: new Date().toISOString(),
-          media: [],
-          video: ''
+          vin:'',
+          status:'for sale',
+          createdAt:new Date().toISOString(),
+          media:[],
+          video:''
         }; 
         db.vehicles.unshift(px); 
-        addAudit('add', 'vehicle', px.id, 'PX ' + px.reg + ' ' + (px.make || '') + ' ' + (px.model || '') + ' from sale ' + s.invNo + ' (' + (vStat?.reg || 'Unknown') + ')'); 
+        addAudit('add','vehicle',px.id,'PX '+px.reg+' '+(px.make||'')+' '+(px.model||'')+' from sale '+s.invNo+' ('+(vStat?.reg || 'Unknown')+')'); 
       } 
     }
-
-    saveDB(); 
-    try { renderAlertBell(); } catch(e) {} 
-    rows();
+    saveDB(); try{renderAlertBell();}catch(e){}; rows();
+    
+    // Clear the form for the next entry
     clearSaleForm();
   };
   
